[docs] Additional CSS refinement contributed by samlh++.
git-svn-id: https://svn.parrot.org/parrot/trunk@40338 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/resources/parrot.css
+++ b/docs/resources/parrot.css
@@ -90,8 +90,8 @@ div#footer {
 
 /* =item constructs no <dt><dd> just <dt>, so we fake it */
 dt {
-	padding-top: 0.5em;
-	padding-bottom: 1em;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
 	font-weight: bold;
 }
 
